--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,52 +12,60 @@
     tools:context="com.example.emile1.findaparty.Login">
 
     <TextView
-        android:id="@+id/email_label"
+        android:id="@+id/email_label_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:layout_alignParentStart="true"
         android:text="@string/email_label"
-        android:textSize="16sp"
+        android:textSize="@dimen/font_size_textview"
         android:paddingLeft="15dp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email_label"
-        android:id="@+id/email"
+        android:layout_below="@id/email_label_login"
+        android:id="@+id/email_login"
         android:inputType="textEmailAddress"
         android:hint="@string/email_hint"
-        android:textSize="14sp"
+        android:textSize="@dimen/font_size_edittext"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"/>
 
     <TextView
-        android:id="@+id/password_label"
+        android:id="@+id/password_label_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email"
+        android:layout_below="@id/email_login"
         android:text="@string/password_label"
-        android:textSize="16sp"
+        android:textSize="@dimen/font_size_textview"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingTop="15dp"/>
 
-    <EditText
-        android:id="@+id/password"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/password_login"
+        android:layout_below="@id/password_label_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:inputType="textPassword"
-        android:layout_below="@id/password_label"
-        android:layout_alignEnd="@id/email"
-        android:hint="@string/password_hint"
-        android:textSize="14sp" />
+        android:layout_marginRight="15dp"
+        app:passwordToggleEnabled="true"
+        app:hintEnabled="false">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password_hint"
+            android:textSize="@dimen/font_size_edittext"
+            android:inputType="textPassword"/>
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/password_login"
         android:layout_marginTop="25dp"
         android:background="@drawable/btn_login"
         android:padding="15dp"
@@ -64,7 +73,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/btn_login"
-        android:textSize="18dp"
+        android:textSize="@dimen/btn_login"
         android:textAllCaps="false"
         android:fontFamily="sans-serif-medium" />
 
@@ -77,7 +86,7 @@
             android:layout_marginTop="10dp"
             android:layout_below="@id/btn_login"
             android:text="@string/btn_register"
-            android:textSize="@dimen/btn_register"
+            android:textSize="@dimen/btn_small"
             android:textAllCaps="false" />
         <Button
             android:id="@+id/btn_retrieve_password"
@@ -88,7 +97,7 @@
             android:layout_marginTop="10dp"
             android:layout_below="@id/btn_login"
             android:text="@string/btn_retrieve_password"
-            android:textSize="@dimen/btn_retrieve_password"
+            android:textSize="@dimen/btn_small"
             android:textAllCaps="false"/>
 
 </RelativeLayout>
