--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="btn_retrieve_password">10sp</dimen>
-    <dimen name="btn_register">10sp</dimen>
+    <dimen name="btn_small">10sp</dimen>
+    <dimen name="btn_login">18sp</dimen>
+    <dimen name="font_size_textview">16sp</dimen>
+    <dimen name="font_size_edittext">14sp</dimen>
 </resources>
