--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,16 +18,19 @@
         android:layout_marginTop="200dp"
         android:layout_alignParentStart="true"
         android:text="@string/email_label"
+        android:textColor="@color/textViews"
         android:textSize="@dimen/font_size_textview"
         android:paddingLeft="15dp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/Theme.App.Base"
         android:layout_below="@id/email_label_login"
         android:id="@+id/email_login"
         android:inputType="textEmailAddress"
         android:hint="@string/email_hint"
         android:textSize="@dimen/font_size_edittext"
+        android:textColorHint="@color/editTexts"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"/>
 
@@ -38,6 +41,7 @@
         android:layout_below="@id/email_login"
         android:text="@string/password_label"
         android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingTop="15dp"/>
@@ -45,6 +49,7 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/password_login"
         android:layout_below="@id/password_label_login"
+        android:theme="@style/Theme.App.Base"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -58,6 +63,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/password_hint"
             android:textSize="@dimen/font_size_edittext"
+            android:textColorHint="@color/editTexts"
             android:inputType="textPassword"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -74,25 +80,24 @@
         android:layout_marginRight="15dp"
         android:text="@string/btn_login"
         android:textSize="@dimen/btn_login"
-        android:textAllCaps="false"
-        android:fontFamily="sans-serif-medium" />
+        android:textAllCaps="false" />
 
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_registerL"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/btn_login"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_below="@id/btn_login"
-            android:text="@string/btn_register"
+            android:text="@string/btn_registerL"
             android:textSize="@dimen/btn_small"
             android:textAllCaps="false" />
         <Button
             android:id="@+id/btn_retrieve_password"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@id/btn_login"
+            android:layout_alignEnd="@id/btn_login"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_below="@id/btn_login"
