--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,12 +19,15 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/firstName_label"
-        android:textSize="@dimen/font_size_textview"/>
+        android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"/>
     <EditText
         android:id="@+id/firstName"
+        android:theme="@style/Theme.App.Base"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/firstName_hint"
+        android:textColorHint="@color/editTexts"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:textSize="@dimen/font_size_edittext"/>
@@ -32,48 +35,120 @@
         android:id="@+id/last_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/last_name_label"
-        android:textSize="@dimen/font_size_textview"/>
+        android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"/>
     <EditText
         android:id="@+id/last_name"
+        android:theme="@style/Theme.App.Base"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:hint="@string/last_name_hint"
+        android:textColorHint="@color/editTexts"
         android:textSize="@dimen/font_size_edittext"/>
     <TextView
         android:id="@+id/yearOfbirth_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingTop="15dp"
         android:text="@string/yearOfBirth"
-        android:textSize="@dimen/font_size_textview"/>
+        android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"/>
     <EditText
         android:id="@+id/yearOfBirth_hint"
+        android:theme="@style/Theme.App.Base"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:hint="@string/yearOfBirth"
-        android:textSize="@dimen/font_size_edittext" />
+        android:textColorHint="@color/editTexts"
+        android:textSize="@dimen/font_size_edittext"
+        android:onClick="openDateList"/>
+    <TextView
+        android:id="@+id/email_label_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingTop="15dp"
+        android:text="@string/email_label"
+        android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"/>
+    <EditText
+        android:id="@+id/email_hint_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:inputType="textEmailAddress"
+        android:hint="@string/email_hint"
+        android:textColorHint="@color/editTexts"
+        android:textSize="@dimen/font_size_textview"/>
+
+    <TextView
+        android:id="@+id/password_label_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingTop="15dp"
+        android:text="@string/password_label"
+        android:textSize="@dimen/font_size_textview"
+        android:textColor="@color/textViews"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/etPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:passwordToggleEnabled="true">
+        android:theme="@style/Theme.App.Base"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        app:passwordToggleEnabled="true"
+        app:hintEnabled="false">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_hint"
-            android:inputType="textPassword"/>
+            android:textColorHint="@color/editTexts"
+            android:inputType="textPassword"
+            android:textSize="@dimen/font_size_edittext"/>
     </android.support.design.widget.TextInputLayout>
 
+    <Button
+        android:id="@+id/btn_registerR"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_login"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:padding="15dp"
+        android:textColor="@color/textButtonLoginColor"
+        android:textSize="@dimen/btn_login"
+        android:text="@string/btn_registerR"
+        android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/back_to_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/btn_back_login"
+        android:textAllCaps="false"
+        android:textColor="@color/textButtonLoginColor"
+        android:textSize="@dimen/btn_small" />
 
 
 
