--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="buttonLoginColor">#7986cb</color>
     <color name="textButtonLoginColor">#FFFFFF</color>
+    <color name="accent">#55C5C5C5</color>
+    <color name="textViews">#f5f7f7f7</color>
+    <color name="editTexts">#2adadada</color>
 </resources>
