--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emile1.findaparty.Login">
+    tools:context="com.example.emile1.findaparty.Activity.Login">
 
     <TextView
         android:id="@+id/email_label_login"
@@ -80,6 +80,7 @@
         android:layout_marginRight="15dp"
         android:text="@string/btn_login"
         android:textSize="@dimen/btn_login"
+        android:onClick="login"
         android:textAllCaps="false" />
 
         <Button
