--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,8 +73,8 @@
         android:layout_marginRight="15dp"
         android:hint="@string/yearOfBirth"
         android:textColorHint="@color/editTexts"
-        android:textSize="@dimen/font_size_edittext"
-        android:onClick="openDateList"/>
+        android:focusable="false"
+        android:textSize="@dimen/font_size_edittext" />
     <TextView
         android:id="@+id/email_label_register"
         android:layout_width="wrap_content"
@@ -139,25 +139,25 @@
         android:textSize="@dimen/font_size_textview"
         android:textColor="@color/textViews"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/etPasswordAgainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.App.Base"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        app:passwordToggleEnabled="true"
-        app:hintEnabled="false">
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/etPasswordAgainLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:theme="@style/Theme.App.Base"-->
+        <!--android:layout_marginLeft="15dp"-->
+        <!--android:layout_marginRight="15dp"-->
+        <!--app:passwordToggleEnabled="true"-->
+        <!--app:hintEnabled="false">-->
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/etPasswordAgain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password_hint"
-            android:textColorHint="@color/editTexts"
-            android:inputType="textPassword"
-            android:textSize="@dimen/font_size_edittext"/>
-    </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputEditText-->
+            <!--android:id="@+id/etPasswordAgain"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/password_hint"-->
+            <!--android:textColorHint="@color/editTexts"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:textSize="@dimen/font_size_edittext"/>-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
     <Button
         android:id="@+id/btn_registerR"
