--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,190 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true" >
 
-    android:id="@+id/activity_register"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="40dp"
-    android:orientation="vertical"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scrollViewRegister"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    tools:context="com.example.emile1.findaparty.Activity.Register">
+        <LinearLayout
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
 
-
-    <TextView
-        android:id="@+id/firstName_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:text="@string/firstName_label"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
-    <EditText
-        android:id="@+id/firstName"
-        android:theme="@style/Theme.App.Base"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/firstName_hint"
-        android:textColorHint="@color/editTexts"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:textSize="@dimen/font_size_edittext"/>
-    <TextView
-        android:id="@+id/last_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:text="@string/last_name_label"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
-    <EditText
-        android:id="@+id/last_name"
-        android:theme="@style/Theme.App.Base"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:hint="@string/last_name_hint"
-        android:textColorHint="@color/editTexts"
-        android:textSize="@dimen/font_size_edittext"/>
-    <TextView
-        android:id="@+id/yearOfbirth_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="15dp"
-        android:text="@string/yearOfBirth"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
-    <EditText
-        android:id="@+id/yearOfBirth_hint"
-        android:theme="@style/Theme.App.Base"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:hint="@string/yearOfBirth"
-        android:textColorHint="@color/editTexts"
-        android:focusable="false"
-        android:textSize="@dimen/font_size_edittext" />
-    <TextView
-        android:id="@+id/email_label_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="15dp"
-        android:text="@string/email_label"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
-    <EditText
-        android:id="@+id/email_hint_register"
-        android:theme="@style/Theme.App.Base"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:inputType="textEmailAddress"
-        android:hint="@string/email_hint"
-        android:textColorHint="@color/editTexts"
-        android:textSize="@dimen/font_size_textview"/>
-
-    <TextView
-        android:id="@+id/password_label_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="15dp"
-        android:text="@string/password_label"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/etPasswordLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.App.Base"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        app:passwordToggleEnabled="true"
-        app:hintEnabled="false">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/etPassword"
+            android:id="@+id/activity_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password_hint"
-            android:textColorHint="@color/editTexts"
-            android:inputType="textPassword"
-            android:textSize="@dimen/font_size_edittext"/>
-    </android.support.design.widget.TextInputLayout>
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="40dp"
+            android:orientation="vertical"
+            tools:context="com.example.emile1.findaparty.Activity.Register">
 
-    <TextView
-        android:id="@+id/passwordAgain_label_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:paddingTop="15dp"
-        android:text="@string/passwordAgain_label"
-        android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"/>
+            <TextView
+                android:id="@+id/firstName_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="@string/firstName_label"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
 
-    <!--<android.support.design.widget.TextInputLayout-->
-        <!--android:id="@+id/etPasswordAgainLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:theme="@style/Theme.App.Base"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--app:passwordToggleEnabled="true"-->
-        <!--app:hintEnabled="false">-->
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/etFirstNameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:theme="@style/Theme.App.Base"
+                app:hintEnabled="false">
 
-        <!--<android.support.design.widget.TextInputEditText-->
-            <!--android:id="@+id/etPasswordAgain"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="@string/password_hint"-->
-            <!--android:textColorHint="@color/editTexts"-->
-            <!--android:inputType="textPassword"-->
-            <!--android:textSize="@dimen/font_size_edittext"/>-->
-    <!--</android.support.design.widget.TextInputLayout>-->
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etFirst_name"
+                    android:theme="@style/Theme.App.Base"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/firstName_hint"
+                    android:textColorHint="@color/editTexts"
+                    android:textSize="@dimen/font_size_edittext"/>
+            </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/btn_registerR"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_login"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:padding="15dp"
-        android:textColor="@color/textButtonLoginColor"
-        android:textSize="@dimen/btn_login"
-        android:text="@string/btn_registerR"
-        android:textAllCaps="false"/>
+            <TextView
+                android:id="@+id/last_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="@string/last_name_label"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
 
-    <Button
-        android:id="@+id/back_to_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/btn_back_login"
-        android:textAllCaps="false"
-        android:textColor="@color/textButtonLoginColor"
-        android:textSize="@dimen/btn_small" />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/etLastNameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:theme="@style/Theme.App.Base"
+                app:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etLast_name"
+                    android:theme="@style/Theme.App.Base"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/last_name_hint"
+                    android:textColorHint="@color/editTexts"
+                    android:textSize="@dimen/font_size_edittext" />
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/date_of_birth_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="15dp"
+                android:text="@string/yearOfBirth"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
+
+            <EditText
+                android:id="@+id/etDate_of_birth"
+                android:theme="@style/Theme.App.Base"
+                android:layout_width="match_parent"
+                android:inputType="date"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:hint="@string/yearOfBirth"
+                android:textColorHint="@color/editTexts"
+                android:focusable="false"
+                android:textSize="@dimen/font_size_edittext" />
+
+            <TextView
+                android:id="@+id/email_label_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="15dp"
+                android:text="@string/email_label"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/etEmailLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:theme="@style/Theme.App.Base"
+                app:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etEmail_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:hint="@string/email_hint"
+                    android:textColorHint="@color/editTexts"
+                    android:textSize="14sp"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <TextView
+                android:id="@+id/password_label_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="15dp"
+                android:text="@string/password_label"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/etPasswordLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/Theme.App.Base"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:passwordToggleEnabled="true"
+                app:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password_hint"
+                    android:textColorHint="@color/editTexts"
+                    android:inputType="textPassword"
+                    android:textSize="@dimen/font_size_edittext"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/passwordAgain_label_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="15dp"
+                android:text="@string/passwordAgain_label"
+                android:textSize="@dimen/font_size_textview"
+                android:textColor="@color/textViews"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/etPasswordAgainLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/Theme.App.Base"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:hintEnabled="false">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etPasswordAgain"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password_confirm"
+                    android:textColorHint="@color/editTexts"
+                    android:inputType="textPassword"
+                    android:textSize="@dimen/font_size_edittext"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_registerR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_login"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:padding="15dp"
+                android:textColor="@color/textButtonLoginColor"
+                android:textSize="@dimen/btn_login"
+                android:text="@string/btn_registerR"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:id="@+id/back_to_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/btn_back_login"
+                android:textAllCaps="false"
+                android:textColor="@color/textButtonLoginColor"
+                android:textSize="@dimen/btn_small" />
 
 
 
-</LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
