--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,24 +21,32 @@
         android:textColor="@color/textViews"
         android:textSize="@dimen/font_size_textview"
         android:paddingLeft="15dp"/>
-    <EditText
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.App.Base"
         android:layout_below="@id/email_label_login"
-        android:id="@+id/email_login"
-        android:inputType="textEmailAddress"
-        android:hint="@string/email_hint"
-        android:textSize="@dimen/font_size_edittext"
-        android:textColorHint="@color/editTexts"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"/>
+        android:id="@+id/emailLoginLayout">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/Theme.App.Base"
+            android:id="@+id/etEmailLogin"
+            android:inputType="textEmailAddress"
+            android:hint="@string/email_hint"
+            android:textSize="@dimen/font_size_edittext"
+            android:textColorHint="@color/editTexts"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"/>
+    </android.support.design.widget.TextInputLayout>
+
 
     <TextView
         android:id="@+id/password_label_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/email_login"
+        android:layout_below="@id/emailLoginLayout"
         android:text="@string/password_label"
         android:textSize="@dimen/font_size_textview"
         android:textColor="@color/textViews"
@@ -47,7 +55,7 @@
         android:paddingTop="15dp"/>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_login"
+        android:id="@+id/passwordLoginLayout"
         android:layout_below="@id/password_label_login"
         android:theme="@style/Theme.App.Base"
         android:layout_width="match_parent"
@@ -58,7 +66,7 @@
         app:hintEnabled="false">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/etPassword"
+            android:id="@+id/etPasswordLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_hint_login"
@@ -71,7 +79,7 @@
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/password_login"
+        android:layout_below="@+id/passwordLoginLayout"
         android:layout_marginTop="25dp"
         android:background="@drawable/btn_login"
         android:padding="15dp"
@@ -83,27 +91,27 @@
         android:onClick="login"
         android:textAllCaps="false" />
 
-        <Button
-            android:id="@+id/btn_registerL"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/btn_login"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/btn_login"
-            android:text="@string/btn_registerL"
-            android:textSize="@dimen/btn_small"
-            android:textAllCaps="false" />
-        <Button
-            android:id="@+id/btn_retrieve_password"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/btn_login"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/btn_login"
-            android:text="@string/btn_retrieve_password"
-            android:textSize="@dimen/btn_small"
-            android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/btn_registerL"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/btn_login"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/btn_login"
+        android:text="@string/btn_registerL"
+        android:textSize="@dimen/btn_small"
+        android:textAllCaps="false" />
+    <Button
+        android:id="@+id/btn_retrieve_password"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/btn_login"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/btn_login"
+        android:text="@string/btn_retrieve_password"
+        android:textSize="@dimen/btn_small"
+        android:textAllCaps="false"/>
 
 </RelativeLayout>
