--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,14 +5,16 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/buttonLoginColor</item>
     </style>
+
     <style name="MyDatepicker" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/datepicker</item>
 
     </style>
+
     <style name="Theme.App.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="colorControlNormal">#55c5c5c5</item>
         <item name="colorControlActivated">@color/accent</item>
@@ -27,6 +29,14 @@
         <item name="android:editTextColor">#212121</item>
         <item name="android:background">#000000</item>
         <item name="android:colorButtonNormal">#FF0000</item>
+    </style>
+
+    <style name="ProgressBar" parent="@android:style/Widget.ProgressBar">
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:background">@color/buttonLoginColor</item>
+        <item name="android:indeterminateDrawable">@drawable/circular_progress_dialog</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
