Fixed app theme dispatch activity

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -33,7 +33,7 @@
         android:textColorHint="@color/editTexts"
         android:textSize="14sp" />
     <Button
-        android:id="@+id/btnPasswordReset"
+        android:id="@+id/btnSendEmail"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
