--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="password_toggle">#b1aeae</color>
     <color name="datepicker">#7986cb</color>
     <color name="nav_header">#636ea6</color>
+    <color name="color_navigation_list_background">#d8d8d9</color>
+    <color name="color_selector_navigation_item">#1b1b1b</color>
 </resources>
