--- a/app/src/main/res/drawable/et_rectangle_shape.xml
+++ b/app/src/main/res/drawable/et_rectangle_shape.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:thickness="0dp"
     android:shape="rectangle">
-
+    <corners android:radius="10dp" />
     <stroke android:width="1dp"
         android:color="@color/et_shape"/>
 
